test-package-compiler/tests/snapshots/compiler_tests__nested_blocks_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (2):
  - Undefined variable: processor
  - Undefined variable: items
